[package]
name = "katakomb"
version = "0.1.0"
authors = ["CodeBunny <slayer111315@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0"
noise = "0.6.0"
ndarray = { version = "0.13.1", features = ["rayon", "serde"] }
na = { version = "0.29.0", package = "nalgebra", features = ["convert-mint"] }
rand = "0.7.3"
rayon = "1.3.0"
rodio = "0.14.0"
image = "0.23.0"
serde = { version = "1.0.106", features = ["derive"] }
internship = "0.6.0"
flo_binding = "1.1.0"
failure = { version = "0.1.8", features = ["backtrace"] }
serde_json = "1.0.53"
structopt = "0.3.14"
fern = "0.6.0"
log = "0.4.8"
chrono = "0.4.11"
float-ord = "0.3.2"
itertools = "0.9.0"
lazy_static = "1.4.0"
specs = "0.17.0"
specs-derive = "0.4.1"
